# qntz

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish-validation.yml  publish.yml
src/: lib.rs  rabitq.rs  simd_ops.rs  ternary.rs
tests/: property_tests.rs
